package Thursday.Abstraction.InterfaceExample;

public class ClassA implements InterfaceB{
    @Override
    public void method1() {

    }

    @Override
    public void method2() {

    }
}
