package Thursday.Abstraction.InterfaceExample;

public class Fish implements WaterAnimal{
    public void swim() {
        System.out.println("Fish swimming");
    }
}
