package Thursday.Abstraction.InterfaceExample;

public interface InterfaceA {

    public void method1();
}
