package Thursday.Abstraction.InterfaceExample;

public interface InterfaceB extends InterfaceA{
    public void method2();
}
